RESOLVED FIXED57207
fix :-webkit-any(:last-child)
https://bugs.webkit.org/show_bug.cgi?id=57207
Summary fix :-webkit-any(:last-child)
Ojan Vafai
Reported 2011-03-27 23:37:13 PDT
fix :-webkit-any(:last-child)
Attachments
Patch (6.35 KB, patch)
2011-03-27 23:39 PDT, Ojan Vafai
no flags
Patch (7.34 KB, patch)
2011-03-28 01:07 PDT, Ojan Vafai
koivisto: review+
Ojan Vafai
Comment 1 2011-03-27 23:39:50 PDT
Ojan Vafai
Comment 2 2011-03-28 01:07:50 PDT
Ojan Vafai
Comment 3 2011-03-28 19:33:00 PDT
Note You need to log in before you can comment on or make changes to this bug.