2011-03-27  Ojan Vafai  <ojan@chromium.org>

Reviewed by Antti Koivisto.

        fix :-webkit-any(:last-child)
        https://bugs.webkit.org/show_bug.cgi?id=57207

        * fast/css/pseudo-any.html:
2011-03-27  Ojan Vafai  <ojan@chromium.org>

        Reviewed by Antti Koivisto.

        fix :-webkit-any(:last-child)
        https://bugs.webkit.org/show_bug.cgi?id=57207

        We were passing the wrong arguments to checkSelector. Also, we were not
        passing through the encounteredLink bool.

        * css/CSSStyleSelector.cpp:
        (WebCore::CSSStyleSelector::SelectorChecker::checkSelector):
        (WebCore::CSSStyleSelector::SelectorChecker::checkOneSelector):
        * css/CSSStyleSelector.h:

Canonical link: https://commits.webkit.org/71985@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82183 268f45cc-cd09-0410-ab3c-d52691b4dbfc